--- a/index.html
+++ b/index.html
@@ -21,24 +21,40 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="/smoketurner.css">
+    <link rel="stylesheet" href="/static/css/smoketurner.css">
     <title>Smoke Turner</title>
   </head>
   <body>
     <header>
-      <a href="/"><img src="/smoketurner_logo.png" width="200" height="161" alt="Smoke Turner"></a>
-      <h1>Smoke Turner</h1>
+      <a href="/"><img src="/static/images/smoke_turner_f.png" width="673" height="161" alt="Smoke Turner"></a>
     </header>
 
     <main>
-      <blockquote>
-        &quot;Hurry! Go find me a left handed smoke turner!&quot;
-        <cite>Old Scouting Trick</cite>
-      </blockquote>
+      <table>
+        <tr>
+          <td>
+            <h1>Services</h1>
+            <ul class="services">
+              <li>AWS Consulting</li>
+              <li>Software Development</li>
+              <li>DevOps Automation</li>
+              <li>Architecture Review</li>
+            </ul>
+          </td>
+          <td>
+            <h1><a href="mailto:contact@smoketurner.com">Contact Us</a></h1>
+          
+            <blockquote>
+              &quot;Hurry! Go find me a left handed smoke turner!&quot;
+              <cite>Old Scouting Trick</cite>
+            </blockquote>
+          </td>
+        </tr>
+      </table>
 
       <ul class="links">
-        <li><a href="https://github.com/smoketurner" target="_blank"><img src="/github.png" width="32" height="32" alt="Github"></a></li>
-        <li><a href="https://twitter.com/smoketurnerllc" target="_blank"><img src="/twitter.png" width="32" height="32" alt="Twitter"></a></li>
+        <li><a href="https://github.com/smoketurner" target="_blank" rel="noopener"><img src="/static/images/github.png" width="32" height="32" alt="Github"></a></li>
+        <li><a href="https://twitter.com/smoketurnerllc" target="_blank" rel="noopener"><img src="/static/images/twitter.png" width="32" height="32" alt="Twitter"></a></li>
       </ul>
     </main>
 
